Enable sidebar with fixed width
There are likely to be other style breaks at the 57em breakpioint now
due to this feature. One noted is the post entry meta being incorrect
due to having relied on 100vw

--- a/app/sass/layout/_content-sidebar.scss
+++ b/app/sass/layout/_content-sidebar.scss
@@ -1,20 +1,38 @@
-.content-area {
-	float: left;
-	margin: 0 (-$size__site-sidebar) 0 0;
-	width: $size__site-main;
-}
 
-.site-main {
-	margin: 0 $size__site-sidebar 0 0;
-}
 
-.site-content .widget-area {
-	float: right;
-	overflow: hidden;
-	width: $size__site-sidebar;
-}
 
-.site-footer {
-	clear: both;
-	width: $size__site-main;
+@media screen and (min-width: 57em) {
+    .site-content {
+        margin: 0 auto;
+        max-width: $size__site-max-width + ( 1.35rem * 2);
+        position: relative;
+        padding: 0 1.2em;
+    }
+    
+    .content-area {
+        float: left;
+        width: 100%;
+    }
+
+    .site-main {
+        padding-right: $size__site-sidebar;
+        clear: both;
+        margin-left: 0;
+        margin-right: 0;
+        max-width: none;
+        overflow: auto;
+    }
+    
+    .widget-area {
+        position: relative;
+        width: $size__site-sidebar;
+        margin-left: -$size__site-sidebar;
+        float: right;
+        overflow: hidden;
+        padding-right: 0 !important;
+    }
+
+    .site-footer {
+        clear: both;
+    }
 }
