--- a/app/sass/site/primary/_global.scss
+++ b/app/sass/site/primary/_global.scss
@@ -12,16 +12,11 @@
     line-height: 1.6em;
     
     @media screen and (min-width: 30em) {
-        margin: 1.8em;
+        margin: 0 1.8em;
     }
 
     @media screen and (min-width: 40em) {
         font-size: 1em;
-    }
-
-    @media screen and (min-width: 57em) {
-        max-width: 45em;
-        margin: 1.8em auto;
     }
 }
 
